Modernize bgp-rib-spi
Use DataObjectIdentifier instead of InstanceIdentifier.

Change-Id: I26ca052727c73ad0822637ecd14d9215791f63ff
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>